Internacionalização e Constraint Layout

--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -1,35 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="69dp"
-        android:layout_height="104dp"
         android:id="@+id/movie_poster"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:padding="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:contentDescription="@string/app_name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/kkyxe7hd9mpookorxkmm6suxab" />
     />
 
     <TextView
         android:id="@+id/movie_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:layout_toRightOf="@id/movie_poster"
-        android:paddingLeft="5dp"
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="--name--" />
     />
 
     <TextView
-        android:id="@+id/movie_detail"
+        android:id="@+id/detail1Movie"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:layout_toRightOf="@id/movie_poster"
-        android:layout_below="@id/movie_name"
-        android:paddingLeft="5dp"
-    />
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:layout_constraintTop_toBottomOf="@id/movie_name"
+        tools:text="--------------category--------------" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/detail2Movie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:layout_constraintTop_toBottomOf="@+id/detail1Movie"
+        tools:text="--------------director--------------" />
+
+    <TextView
+        android:id="@+id/detail3Movie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Small"
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:layout_constraintTop_toBottomOf="@+id/detail2Movie"
+        tools:text="--release--" />
+
+    <TextView
+        android:id="@+id/detail4Movie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toEndOf="@+id/movie_poster"
+        app:layout_constraintTop_toBottomOf="@+id/detail3Movie"
+        tools:text="--popularity---" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
