--- a/app/src/main/res/layout/activity_list_movies.xml
+++ b/app/src/main/res/layout/activity_list_movies.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListMoviesActivity">
+    tools:context="br.usjt.ads20.moviesapp.ListMoviesActivity">
 
     <ListView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fastScrollEnabled="true"
         android:id="@+id/listview"
-    />
-</LinearLayout>
+        android:fastScrollEnabled="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+    </ListView>
+</androidx.constraintlayout.widget.ConstraintLayout>
