--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
 >
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +45,7 @@
             tools:text="Movie Title" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/backdropView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -55,7 +55,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtTitle"
-            app:srcCompat="@drawable/bogkgrgdhrbyjslpxaxhxvstddv" />
+            app:srcCompat="@drawable/nobackdrop" />
 
         <TextView
             android:id="@+id/lblCategory"
@@ -65,7 +65,7 @@
             android:text="@string/lblCategory"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="@+id/guideline3"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/backdropView" />
 
         <TextView
             android:id="@+id/lblDirector"
@@ -133,5 +133,18 @@
             app:layout_constraintStart_toStartOf="@+id/lblPopularity"
             app:layout_constraintTop_toBottomOf="@+id/lblPopularity"
             tools:text="Movie description" />
+
+        <ProgressBar
+            android:id="@+id/progressBarDetail"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="invisible" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
