--- a/app/src/main/res/layout/movie_row.xml
+++ b/app/src/main/res/layout/movie_row.xml
@@ -17,7 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kkyxe7hd9mpookorxkmm6suxab" />
+        app:srcCompat="@drawable/noposter" />
     />
 
     <TextView
